fix: fixing menu spacing

--- a/css/layout/htmlMain.css
+++ b/css/layout/htmlMain.css
@@ -83,6 +83,32 @@
   margin: 0;
 }
 
+@media (max-width: 1000px) {
+    .hover-card {
+        position: relative;
+        top: 110%; 
+        left: 0;
+        background-color: #D08E6C;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 15px;
+        border-radius: 8px;
+        z-index: 1;
+        display: none;
+        width: max-content;
+        max-width: 400px;
+        border: none; /* Remove bordas visíveis */
+        box-shadow: none; /* Remove sombras */
+    }
+
+
+    .bloco {
+        position: relative;
+        display: flex; /* Alinha os itens de forma flexível */
+        flex-direction: column; /* Coloca os itens (imagem e cards) em coluna */
+        align-items: center; /* Garante que os itens fiquem centralizados */
+        justify-content: flex-start; /* Começa os itens no topo */
+    }
+}
 
 
 @media (max-width: 768px) {
